--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="about-content">
             <div class="profile-image">
-                <img src="/assets/images/f5ef5e51-c0c9-43d9-948f-5494403f70bf.jfif" alt="Alonso Paredes" class="profile-img">
+                <img src="/Portfolio/assets/images/f5ef5e51-c0c9-43d9-948f-5494403f70bf.jfif" alt="Alonso Paredes" class="profile-img">
             </div>
             <div class="about-text">
                 <h1 class="welcome-text" id="welcomeText">BIENVENIDO</h1>
@@ -72,7 +72,7 @@
             <div class="projects-grid" data-category="web">
                 <div class="project-card">
                     <a >
-                        <img src="assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
+                        <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb1">E-commerce Platform</h4>
                             <p id="projectWeb1Desc">Plataforma de comercio electrónico desarrollada con tecnologías modernas para una experiencia de usuario óptima.</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="project-card">
                     <a>
-                        <img src="/assets/images/Trujillo T3D - Web.png" alt="Web Project 2" class="project-image">
+                        <img src="/Portfolio/assets/images/Trujillo T3D - Web.png" alt="Web Project 2" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb2">Portfolio Website</h4>
                             <p id="projectWeb2Desc">Sitio web responsivo para mostrar proyectos y habilidades profesionales con diseño moderno.</p>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="project-card">
                     <a>
-                        <img src="assets/images/calcular-salario.png" alt="Web Project 3" class="project-image">
+                        <img src="/Portfolio/assets/images/calcular-salario.png" alt="Web Project 3" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb3">Calculadora Salario</h4>
                             <p id="projectWeb3Desc">Sitio web responsivo para calcular el salario de un empleado.</p>
@@ -128,7 +128,7 @@
             <div class="projects-grid" data-category="desktop">
                 <div class="project-card">
                     <a>
-                        <img src="assets/images/MiniMarketGG.png" alt="Desktop Project" class="project-image">
+                        <img src="/Portfolio/assets/images/MiniMarketGG.png" alt="Desktop Project" class="project-image">
                         <div class="project-info">
                             <h4>MiniMarketGG</h4>
                             <p>Sistema de Ventas y Logistica de escritorio para un minimarket, permite: login de usuarios y configuración de permisos, venta de productos, control de inventario de productos, pedidos, categorias. Además, histtorial de ventas e impresión de boletas.</p>
@@ -148,7 +148,7 @@
             <div class="projects-grid" data-category="models">
                 <div class="project-card">
                     <a>
-                        <img src="assets/images/Detección_De_Frutas - IA.png" alt="AI Project" class="project-image">
+                        <img src="/Portfolio/assets/images/Detección_De_Frutas - IA.png" alt="AI Project" class="project-image">
                         <div class="project-info">
                             <h4>Detección temprana de enfermedades en frutas usando CNN y Tensor Flow para mejorar el control de calidad agroalimentario</h4>
                             <p>Desarrollar un sistema automatizado basado en redes neuronales convolucionales (CNN) utilizando TensorFlow para mejorar la precisión en la detección temprana de enfermedades en frutas en la agroindustria.</p>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="project-card">
                     <a>
-                        <img src="assets/images/deteccion_de_fraudes.png" alt="AI Project" class="project-image">
+                        <img src="/Portfolio/assets/images/deteccion_de_fraudes.png" alt="AI Project" class="project-image">
                         <div class="project-info">
                             <h4>Optimización de un modelo híbrido Autoencoder y Random Forest para la detección precisa de patrones anómalos en transacciones financieras </h4>
                             <p>Evaluar la efectividad de un modelo híbrido optimizado basado en Autoencoders y Random Forest en la detección de patrones anómalos en transacciones financieras, mediante la reducción de características y optimización de recursos computacionales.</p>
@@ -253,7 +253,7 @@
         </div>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="/Portfolio/js/script.js"></script>
     <!-- Footer -->
 <footer class="footer">
     <p>© 2025 Creado por chiqocorp</p>
