--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <a >
                         <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
                         <div class="project-info">
-                            <h4 id="projectWeb1">E-commerce Platform</h4>
-                            <p id="projectWeb1Desc">Plataforma de comercio electrónico desarrollada con tecnologías modernas para una experiencia de usuario óptima.</p>
+                            <h4 id="projectWeb1">TrendSpace</h4>
+                            <p id="projectWeb1Desc">Plataforma de comercio electrónico colaborativo donde los usuarios no solo compran, sino también votan, proponen y apoyan diseños de moda únicos. La producción se activa solo cuando una prenda alcanza una meta mínima de interés, reduciendo desperdicios y fomentando decisiones colectivas.</p>
                             <div class="tech-stack">
                                 <span class="tech-tag">HTML</span>
                                 <span class="tech-tag">CSS</span>
@@ -91,8 +91,8 @@
                     <a>
                         <img src="/Portfolio/assets/images/Trujillo T3D - Web.png" alt="Web Project 2" class="project-image">
                         <div class="project-info">
-                            <h4 id="projectWeb2">Portfolio Website</h4>
-                            <p id="projectWeb2Desc">Sitio web responsivo para mostrar proyectos y habilidades profesionales con diseño moderno.</p>
+                            <h4 id="projectWeb2">Trujillo T3D - Plataforma Web</h4>
+                            <p id="projectWeb2Desc">Plataforma web donde los usuarios podrán comprar productos y hacer seguimiento de sus pedidos. A la vez, los usuarios que son parte de la propia empresa podrán tener la posibilidad de editar productos del catálogo, editar pedidos, entre otras funciones.</p>
                             <div class="tech-stack">
                                 <span class="tech-tag">Figma</span>
                                 <span class="tech-tag">HTML</span>
