--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <img src="/Portfolio/assets/images/MiniMarketGG.png" alt="Desktop Project" class="project-image">
                         <div class="project-info">
                             <h4>MiniMarketGG</h4>
-                            <p>Sistema de Ventas y Logistica de escritorio para un minimarket, permite: login de usuarios y configuración de permisos, venta de productos, control de inventario de productos, pedidos, categorias. Además, histtorial de ventas e impresión de boletas.</p>
+                            <p>Sistema de ventas y control de inventario de escritorio para un minimarket, permiteiendo login de usuarios y configuración de permisos, venta de productos, control de inventario de productos, pedidos, categorias. Además, histtorial de ventas e impresión de boletas.</p>
                             <div class="tech-stack">
                                 <span class="tech-tag">Java</span>
                                 <span class="tech-tag">MySQL</span>
