--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="projects-grid" data-category="web">
                 <div class="project-card">
                     <a >
-                        <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
+                        <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb1">TrendSpace</h4>
                             <p id="projectWeb1Desc">Plataforma de comercio electrónico colaborativo donde los usuarios no solo compran, sino también votan, proponen y apoyan diseños de moda únicos. La producción se activa solo cuando una prenda alcanza una meta mínima de interés, reduciendo desperdicios y fomentando decisiones colectivas.</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="project-card">
                     <a>
-                        <img src="/Portfolio/assets/images/Trujillo T3D - Web.png" alt="Web Project 2" class="project-image">
+                        <img src="/Portfolio/assets/images/Trujillo T3D - Web.png" alt="Web Project" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb2">Trujillo T3D - Plataforma Web</h4>
                             <p id="projectWeb2Desc">Plataforma web donde los usuarios podrán comprar productos y hacer seguimiento de sus pedidos. A la vez, los usuarios que son parte de la propia empresa podrán tener la posibilidad de editar productos del catálogo, editar pedidos, entre otras funciones.</p>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="project-card">
                     <a>
-                        <img src="/Portfolio/assets/images/calcular-salario.png" alt="Web Project 3" class="project-image">
+                        <img src="/Portfolio/assets/images/calcular-salario.png" alt="Web Project" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb3">Calculadora Salario</h4>
                             <p id="projectWeb3Desc">Sitio web responsivo para calcular el salario de un empleado.</p>
