--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <a >
                         <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
                         <div class="project-info">
-                            <h4 id="projectWeb1">TrendSpace</h4>
-                            <p id="projectWeb1Desc">Plataforma de comercio electrónico colaborativo donde los usuarios no solo compran, sino también votan, proponen y apoyan diseños de moda únicos. La producción se activa solo cuando una prenda alcanza una meta mínima de interés, reduciendo desperdicios y fomentando decisiones colectivas.</p>
+                            <h4 id="projectWeb_1">TrendSpace</h4>
+                            <p id="projectWeb_1Desc">Plataforma de comercio electrónico colaborativo donde los usuarios no solo compran, sino también votan, proponen y apoyan diseños de moda únicos. La producción se activa solo cuando una prenda alcanza una meta mínima de interés, reduciendo desperdicios y fomentando decisiones colectivas.</p>
                             <div class="tech-stack">
                                 <span class="tech-tag">HTML</span>
                                 <span class="tech-tag">CSS</span>
@@ -108,8 +108,8 @@
                     <a>
                         <img src="/Portfolio/assets/images/calcular-salario.png" alt="Web Project 3" class="project-image">
                         <div class="project-info">
-                            <h4 id="projectWeb3">Calculadora Salario</h4>
-                            <p id="projectWeb3Desc">Sitio web responsivo para calcular el salario de un empleado.</p>
+                            <h4 id="projectWeb_3">Calculadora Salario</h4>
+                            <p id="projectWeb_3Desc">Sitio web responsivo para calcular el salario de un empleado.</p>
                             <div class="tech-stack">
                                 <span class="tech-tag">Angular</span>
                                 <span class="tech-tag">TypeScript</span>
