--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </div>
                     </a>
                     <!-- Botón de enlace debajo del proyecto -->
-                    <a href="https://hxtxrchq.github.io/calculadora-salario-main/" class="project-button">Ver Proyecto</a>
+                    <a href="https://github.com/hxtxrchq/calculadora-salario" class="project-button">Ver Proyecto</a>
                 </div>
             </div>
 
