--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alonso Paredes - Portfolio</title>
+    <link rel="icon" href="/Portfolio/assets/images/icono.png" type="image/png">
     <link rel="stylesheet" href="/Portfolio/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Incluir la fuente Madimi One -->
