--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         </div>
                     </a>
                     <!-- Botón de enlace debajo del proyecto -->
-                    <a href="https://linkdelproyectoAI.com" class="project-button">Ver Proyecto</a>
+                    <a href="https://fruit-detective-vision-app.lovable.app/" class="project-button">Ver Proyecto</a>
                 </div>
                 <div class="project-card">
                     <a>
