--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                     </a>
                     <!-- Botón de enlace debajo del proyecto -->
-                    <a href="https://github.com/hxtxrchq/calculadora-salario" class="project-button">Ver Proyecto</a>
+                    <a href="https://trendspaceshopping.vercel.app/" class="project-button">Ver Proyecto</a>
                 </div>
             </div>
 
