--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="about-content">
             <div class="profile-image">
-                <img src="/Portfolio/assets/images/f5ef5e51-c0c9-43d9-948f-5494403f70bf.jfif" alt="Alonso Paredes" class="profile-img">
+                <img src="/Portfolio/assets/images/FotoCarnet.jpg" alt="Alonso Paredes" class="profile-img">
             </div>
             <div class="about-text">
                 <h1 class="welcome-text" id="welcomeText">BIENVENIDO</h1>
