--- a/index.html
+++ b/index.html
@@ -124,7 +124,27 @@
                     <a href="https://trendspaceshopping.vercel.app/" class="project-button">Ver Proyecto</a>
                 </div>
             </div>
+            <div class="projects-grid" data-category="web">
+                <div class="project-card">
+                    <a >
+                        <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
+                        <div class="project-info">
+                            <h4 id="projectWeb_1">TrendSpace</h4>
+                            <p id="projectWeb_1Desc">Plataforma de comercio electrónico colaborativo donde los usuarios no solo compran, sino también votan, proponen y apoyan diseños de moda únicos. La producción se activa solo cuando una prenda alcanza una meta mínima de interés, reduciendo desperdicios y fomentando decisiones colectivas.</p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">HTML</span>
+                                <span class="tech-tag">CSS</span>
+                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">MySQL</span>
+                            </div>
+                        </div>
+                    </a>
+                    <!-- Botón de enlace debajo del proyecto -->
+                    <a href="https://trendspace.hubstem.org" class="project-button">Ver Proyecto</a>
+                </div>
+            </div>
 
+            
             <!-- Desktop Projects -->
             <div class="projects-grid" data-category="desktop">
                 <div class="project-card">
