--- a/index.html
+++ b/index.html
@@ -123,26 +123,23 @@
                     <!-- Botón de enlace debajo del proyecto -->
                     <a href="https://trendspaceshopping.vercel.app/" class="project-button">Ver Proyecto</a>
                 </div>
-            </div>
-            <div class="projects-grid" data-category="web">
                 <div class="project-card">
                     <a >
-                        <img src="/Portfolio/assets/images/trendSpace-Web.png" alt="Web Project 1" class="project-image">
+                        <img src="assets/images/image.png" alt="Web Project 4" class="project-image">
                         <div class="project-info">
-                            <h4 id="projectWeb_1">TrendSpace</h4>
-                            <p id="projectWeb_1Desc">Plataforma de comercio electrónico colaborativo donde los usuarios no solo compran, sino también votan, proponen y apoyan diseños de moda únicos. La producción se activa solo cuando una prenda alcanza una meta mínima de interés, reduciendo desperdicios y fomentando decisiones colectivas.</p>
+                            <h4 id="projectWeb4">Web informativa - Municipalidad Chacaneque</h4>
+                            <p id="projectWeb4Desc">Web informativa de la Municipalidad de chacaneque, paginas de noticias, funcionarios, decretos supremos, etc</p>
                             <div class="tech-stack">
-                                <span class="tech-tag">HTML</span>
-                                <span class="tech-tag">CSS</span>
-                                <span class="tech-tag">JavaScript</span>
-                                <span class="tech-tag">MySQL</span>
+                                <span class="tech-tag">Wordpress</span>
+                                <span class="tech-tag">Elementor</span>
                             </div>
                         </div>
                     </a>
                     <!-- Botón de enlace debajo del proyecto -->
-                    <a href="https://trendspace.hubstem.org" class="project-button">Ver Proyecto</a>
+                    <a href="#" class="project-button">Ver Proyecto</a>
                 </div>
             </div>
+            
 
             
             <!-- Desktop Projects -->
