--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <img src="/Portfolio/assets/images/calcular-salario.png" alt="Web Project 3" class="project-image">
                         <div class="project-info">
                             <h4 id="projectWeb_3">Calculadora Salario</h4>
-                            <p id="projectWeb_3Desc">Sitio web responsivo para calcular el salario de un empleado.</p>
+                            <p id="projectWeb_3Desc">Sitio web calculadora simple para calcular el salario de un empleado.</p>
                             <div class="tech-stack">
                                 <span class="tech-tag">Angular</span>
                                 <span class="tech-tag">TypeScript</span>
