--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                                 <a href="#" target="_blank" class="profile-link">
                                     <i class="fas fa-globe"></i>
                                 </a>
-                                <button class="profile-link" onclick="openCVModal()">
+                                <a href="assets/images/CV_ALONSO_PAREDES.pdf" target="_blank" class="profile-link">
                                     <i class="fas fa-file-pdf"></i>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
