--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alonso Paredes Portfolio</title>
     <link rel="icon" href="assets/images/icono.png" type="image/png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="Portfolio/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Incluir la fuente Madimi One -->
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
@@ -491,7 +491,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Portfolio/js/script.js"></script>
     <!-- Footer -->
 </body>
 </html>
