--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <a href="https://github.com/hxtxrchq" target="_blank" class="profile-link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank" class="profile-link">
+                                <a href="https://hxtxrchq.github.io/Portfolio/" target="_blank" class="profile-link">
                                     <i class="fas fa-globe"></i>
                                 </a>
                                 <a href="assets/images/CV_ALONSO_PAREDES.pdf" target="_blank" class="profile-link">
