--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="/assets/images/Trujillo T3D - Web.png" alt="E-commerce">
+                        <img src="assets/images/Trujillo T3D - Web.png" alt="E-commerce">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
