--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="hero-image">
                     <div class="profile-card">
                         <div class="profile-img">
-                            <img src="assets/images/f5ef5e51-c0c9-43d9-948f-5494403f70bf.jfif" alt="Alonso Paredes">
+                            <img src="assets/images/foto.png" alt="Alonso Paredes">
                         </div>
                         <div class="profile-info">
                             <h3>Alonso Paredes</h3>
