Add project cards for NINA Gelato and HG Ingepro

--- a/index.html
+++ b/index.html
@@ -309,6 +309,47 @@
                         </div>
                     </div>
                 </div>
+                 <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="/assets/images/gelato.png"E-commerce">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://ninagelato.net.pe/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                               
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3> E-commerce - NINA Gelato & Caffè</h3>
+                        <p>Tienda con enfoque visual en producto, mensajes de temporada y CTA claro.
+            Experiencia simple para descubrir sabores y realizar pedidos.</p>
+                        <div class="project-tech">
+                            <span class="tech-badge">WordPress</span>
+                            <span class="tech-badge">Elementor</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="/assets/images/HG IngePro.png" alt="E-commerce">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://hgingepro.tiodanistore.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                             
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Plataforma Web - HG Ingepro</h3>
+                        <p>Sitio corporativo para empresa de soluciones en energía y
+            climatización. Se priorizó claridad de servicios, CTAs de
+            cotización y performance en dispositivos móviles.</p>
+                        <div class="project-tech">
+                            <span class="tech-badge">WordPress</span>
+                            <span class="tech-badge">Elementor</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card" data-category="web">
                     <div class="project-image">
                         <img src="assets/images/Trujillo T3D - Web.png" alt="E-commerce">
