Fix img tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
                  <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="/assets/images/gelato.png"E-commerce">
+                        <img src="assets/images/gelato.png"E-commerce">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://ninagelato.net.pe/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
@@ -331,7 +331,7 @@
                 </div>
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="/assets/images/HG IngePro.png" alt="E-commerce">
+                        <img src="assets/images/HG IngePro.png" alt="E-commerce">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://hgingepro.tiodanistore.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
