Update project link for HG IngePro

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <img src="assets/images/HG IngePro.png" alt="E-commerce">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://hgingepro.tiodanistore.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://hgingeproperu.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                              
                             </div>
                         </div>
