Update timeline date for web developer role

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">Junio 2025 - Actualidad</div>
+                        <div class="timeline-date">Mayo 2025 - Septiembre 2025</div>
                         <h3>Desarrollador de Diseño Web</h3>
                         <h4>Agencia DN - Software & Marketing</h4>
                         <p>Desarrollo y diseño de páginas web responsivas y totalmente funcionales, optimizadas para brindar una experiencia de usuario fluida y adaptada a las necesidades de cada cliente.</p>
