--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                         <img src="assets/images/LOGO_SIN_FONDO.png" alt="Proyecto Android">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                                <a href="" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://www.mediafire.com/file/et9hsjhlkrmqqxv/app-release.apk/file" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://github.com/hxtxrchq/payreminder/tree/App" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
